work in progress 2

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -308,9 +308,10 @@
     "openweather_hits = 0\n",
     "\n",
     "row_count = 1\n",
+    "exceptions = 0\n",
     "\n",
     "for index, row in city_weather.iterrows():\n",
-    "    if row_count < 10:\n",
+    "    if row_count < 119:\n",
     "        print(index)\n",
     "        if row_count % 60 == 0:\n",
     "            print(\"Sleeping for 61 seconds...\")\n",
@@ -332,6 +333,7 @@
     "            \n",
     "        except Exception:\n",
     "            print(f\"The city {city} was not found on OpenWeather.\")\n",
+    "            exceptions+=1\n",
     "            city_weather.iloc[0:0]\n",
     "\n",
     "        row_count+=1\n",
@@ -644,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   },
   "nteract": {
    "version": "0.12.3"
