--- a/kb_weatherpy.ipynb
+++ b/kb_weatherpy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -498,15 +498,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plotting the Data\n",
-    "* Use proper labeling of the plots using plot titles (including date of analysis) and axes labels.\n",
-    "* Save the plotted figures as .pngs."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Latitude vs. Temperature Plot"
    ]
   },
@@ -536,7 +527,7 @@
     "plt.xlabel(\"Latitude\")\n",
     "plt.grid(True)\n",
     "\n",
-    "plt.savefig(\"latitude_by_maxtemp.png\")\n",
+    "plt.savefig(\"output_data/latitude_by_maxtemp.png\")\n",
     "\n",
     "plt.show()"
    ]
@@ -574,7 +565,7 @@
     "plt.xlabel(\"Latitude\")\n",
     "plt.grid(True)\n",
     "\n",
-    "plt.savefig(\"latitude_by_humidity.png\")\n",
+    "plt.savefig(\"output_data/latitude_by_humidity.png\")\n",
     "\n",
     "plt.show()"
    ]
@@ -614,7 +605,7 @@
     "plt.grid(True)\n",
     "\n",
     "# Save the figure\n",
-    "plt.savefig(\"latitude_by_cloudiness.png\")\n",
+    "plt.savefig(\"output_data/latitude_by_cloudiness.png\")\n",
     "\n",
     "# Show plot\n",
     "plt.show()"
@@ -655,7 +646,7 @@
     "plt.grid(True)\n",
     "\n",
     "# Save the figure\n",
-    "plt.savefig(\"latitude_by_windspeed.png\")\n",
+    "plt.savefig(\"output_data/latitude_by_windspeed.png\")\n",
     "\n",
     "# Show plot\n",
     "plt.show()\n"
